--- a/cordova-battery.html
+++ b/cordova-battery.html
@@ -1,5 +1,7 @@
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../cordova-core/cordova-core.html">
+<link href="../polymer/polymer.html"
+  rel="import">
+<link href="../cordova-core/cordova-core.html"
+  rel="import">
 <!--
 An element providing access to battery status for cordova applications.
 
