Change boolean values. Change observer

--- a/cordova-battery.html
+++ b/cordova-battery.html
@@ -15,7 +15,8 @@ Example:
 -->
 <dom-module id="cordova-battery">
   <template>
-    <cordova-core ready="{{ready}}"></cordova-core>
+    <cordova-core
+      ready="{{ready}}"></cordova-core>
   </template>
   <script src="cordova-battery.js"></script>
 </dom-module>
