--- a/cordova-battery.html
+++ b/cordova-battery.html
@@ -3,7 +3,7 @@
 <link href="../cordova-core/cordova-core.html"
   rel="import">
 <!--
-An element providing access to battery status for cordova applications.
+An element providing information about the battery status.
 
 Example:
 
@@ -16,7 +16,8 @@ Example:
 <dom-module id="cordova-battery">
   <template>
     <cordova-core
-      ready="{{ready}}"></cordova-core>
+      paused="{{_paused_}}"
+      ready="{{_ready_}}"></cordova-core>
   </template>
   <script src="cordova-battery.js"></script>
 </dom-module>
