--- a/demo/index.html
+++ b/demo/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <!-- META -->
+    <link rel="import" href="../cordova-battery.html">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-    <!-- COMPONENT -->
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="../cordova-battery.html">
+    <title>cordova-battery Demo</title>
+
+    <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
   </head>
-  <body unresolved>
+  <body >
     <style>
       .level,
       .is-plugged {
